--- a/www/kpw2008/css/style.css
+++ b/www/kpw2008/css/style.css
@@ -44,7 +44,7 @@ a:hover {
         background: white;
 }
 .sponsors h2 {
-        background: transparent url(/images/sponsors_bg.png) no-repeat scroll left top;
+        background: transparent url(../images/sponsors_bg.png) no-repeat scroll left top;
         font-size: 1.0em;
         font-weight: normal;
         color: #777;
@@ -129,7 +129,7 @@ a:hover {
 /* Content */
 #content {
         padding: 120px 0 0px;
-        background: transparent url(/images/kpw_horizontal.png) no-repeat scroll center 20px !important;
+        background: transparent url(../images/kpw_horizontal.png) no-repeat scroll center 20px !important;
         
 }
 
@@ -150,14 +150,14 @@ div.box {
 }
 div.box_top {
         height: 30px;
-        background: transparent url(/images/box_top.png) no-repeat scroll center bottom !important;
+        background: transparent url(../images/box_top.png) no-repeat scroll center bottom !important;
 }
 div.box_middle {
-        background: transparent url(/images/box_middle.png) repeat-y scroll center top !important;
+        background: transparent url(../images/box_middle.png) repeat-y scroll center top !important;
 }
 div.box_bottom {
         height: 150px;
-        background: transparent url(/images/box_bottom.png) no-repeat scroll center top !important;
+        background: transparent url(../images/box_bottom.png) no-repeat scroll center top !important;
 }
 
 /* Content Text */
@@ -212,7 +212,7 @@ div.content_block tr.last td {
 
 /* Footer Text */
 div.footer_logo {
-        background: transparent url(/images/kpw_footer.png) no-repeat scroll center top !important;
+        background: transparent url(../images/kpw_footer.png) no-repeat scroll center top !important;
         margin-top: 20px;
         color: #999;
         font-size: 0.9em;
@@ -296,7 +296,7 @@ div.footer_block a:hover {
         padding: 0;
 }
 .topic {
-        background: transparent url(/kpw2008/images/post.gif) no-repeat scroll 0 2px;
+        background: transparent url(../images/post.gif) no-repeat scroll 0 2px;
         padding-left: 20px;
 }
 .author {
