--- a/www-framework/kpw/html/css/style.css
+++ b/www-framework/kpw/html/css/style.css
@@ -31,10 +31,10 @@ h4 {
     font-size: 110%;
 }
 a {
-    color: #ff8080;
+        color: #ff8080;
 }
 a:hover {
-    color: #388dd5;
+        color: #388dd5;
 }
 
 /**
@@ -106,11 +106,11 @@ a:hover {
 }
 
 #navigation li {
-    margin: 0;
-    float: left;
-    list-style-image: none;
-    list-style-position: outside;
-    list-style-type: none;
+        margin: 0;
+        float: left;
+        list-style-image: none;
+        list-style-position: outside;
+        list-style-type: none;
 }
 #navigation li a {
     color: white;
@@ -119,21 +119,20 @@ a:hover {
     margin: 0 1em 0 0;
     text-decoration: none;
 }
-#navigation li a:hover {
+#navigation li a: hover {
     color: yellow;
     text-decoration: underline;
 }
 #navigation ul li a.selected {
-    font-size: 1.1em;
-    font-weight: bold;
-    color: yellow;
+        font-weight: bold;
+        color: yellow;
 }
 
 /* Content */
 #content {
-    padding: 120px 0 0px;
-    background: transparent url(/images/kpw_horizontal.png) no-repeat scroll center 20px !important;
-    
+        padding: 120px 0 0px;
+        background: transparent url(/images/kpw_horizontal.png) no-repeat scroll center 20px !important;
+        
 }
 
 /* Footer */
@@ -178,10 +177,10 @@ div.content_block .meta {
     color: #555;
 }
 div.content_faq {
-    margin: 20px 30px 0;
-    border-width: 1px;
-    border-color: #cccccc;
-    border-style: solid none none solid;
+        margin: 20px 30px 0;
+        border-width: 1px;
+        border-color: #CCCCCC;
+        border-style: solid none none solid;
 }
 /*
 div.content_block .table_warpper {
@@ -251,7 +250,7 @@ div.footer_block a {
     color: #ffffff;
     text-decoration: none;
 }
-div.footer_block a:hover {
+div.footer_block a: hover {
     text-decoration: underline;
     color: yellow;
 }
@@ -294,16 +293,16 @@ div.footer_block a:hover {
     margin: 15px 20px;
 }
 .banner {
-    margin: 15px 20px 5px;
-    padding: 0;
+        margin: 15px 20px 5px;
+        padding: 0;
 }
 .topic {
-    background: transparent url(/images/post.gif) no-repeat scroll 0 2px;
-    padding-left: 20px;
+        background: transparent url(/kpw2008/images/post.gif) no-repeat scroll 0 2px;
+        padding-left: 20px;
 }
 .author {
-    color: #333333;
+        color: #333333;
 }
 .map-img {
-    text-align: center;
+	text-align: center;
 }
