KPW2008 : AutoStoreDateTime 컴포넌트 추가, 티셔츠 사이즈 추가

--- a/trunk/www-framework/kpw/template/tt/register/default.html
+++ b/trunk/www-framework/kpw/template/tt/register/default.html
@@ -15,10 +15,12 @@
   닉네임 : <input type="text" name="nick" size="10" /><br/>
   휴대전화 : <input type="text" name="phone" size="20" /><br/>
   티셔츠 사이즈: <select name="tshirt">
-      <option value="90">90
-      <option value="95">95
-      <option value="100">100
-      <option value="105">105
+      <option value="S(85)">S(85)
+      <option value="M(90)">M(90)
+      <option value="L(95)">L(95)
+      <option value="XL(100)">XL(100)
+      <option value="XXL(105)">XXL(105)
+      <option value="XXXL(110)">XXXL(110)
   </select>
   <br/>
   <input type="submit" value="참가신청" />
