path of sponsor images

--- a/trunk/www-framework/kpw/template/tt/register/default.html
+++ b/trunk/www-framework/kpw/template/tt/register/default.html
@@ -30,7 +30,7 @@
                       </select>
                     </dd>
                   </dl>
-                  <div class="button"><input type="submit" value="참가신청" /></div>
+                  <div class="button"><input type="submit" value="신청" /></div>
                 </fieldset>
               </form>
             </div>
