--- a/trunk/www-framework/kpw/template/tt/default/default.html
+++ b/trunk/www-framework/kpw/template/tt/default/default.html
@@ -1,6 +1,6 @@
             <div class="content_block">
-              <h1>Korean Perl Workshop 2008: Rising Perl</h1>
-              <div class="meta">2008년 08월 08일 by keedi</div>
+              <h1 id="top">Korean Perl Workshop 2008: Rising Perl</h1>
+              <p class="meta">2008년 08월 08일 by keedi</p>
               <ul>
                 <li>
                   <b>시간:</b>
@@ -92,7 +92,7 @@
             </div>
             <div class="content_block">
               <h2>KPW2008 공식 홈페이지를 개시했습니다.</h2>
-              <div class="meta">2008년 08월 08일 by keedi</div>
+              <p class="meta">2008년 08월 08일 by keedi</p>
               <p>
                 안녕하세요! :-)
               </p>
