--- a/trunk/www-framework/kpw/template/tt/register/default.html
+++ b/trunk/www-framework/kpw/template/tt/register/default.html
@@ -14,15 +14,15 @@
                 <fieldset>
                   <legend>사전등록</legend>
                   <dl>
-		    <dt><span class="required">*</span><label for="email">email</label>:&nbsp;</dt><dd><input type="text" name="email" size="30" id="email" /></dd>
-		    <dt><span class="required">*</span><label for="password">비밀번호</label>:&nbsp;</dt><dd><input type="password" name="password" size="10" id="password" /></dd>
-		    <dt><span class="required">*</span><label for="password_confirm">비밀번호(확인)</label>:&nbsp;</dt><dd><input type="password" name="password_confirm" size="10" id="password_confirm" /></dd>
-		    <dt><span class="required">*</span><label for="name">이름</label>:&nbsp;</dt><dd><input type="text" name="name" size="10" id="name" /></dd>
-		    <dt><span class="required">*</span><label for="mobile">휴대전화</label>:&nbsp;</dt><dd><dd><input type="text" name="phone" size="20" id="mobile"/></dd>
+		    <dt><span class="required">*</span><label for="email">email</label>:&nbsp;</dt><dd><input type="text" name="email" size="30" id="email" class="long" /></dd>
+		    <dt><span class="required">*</span><label for="password">비밀번호</label>:&nbsp;</dt><dd><input type="password" name="password" size="10" id="password" class="medium" /></dd>
+		    <dt><span class="required">*</span><label for="password_confirm">비밀번호(확인)</label>:&nbsp;</dt><dd><input type="password" name="password_confirm" size="10" id="password_confirm" class="medium" /></dd>
+		    <dt><span class="required">*</span><label for="name">이름</label>:&nbsp;</dt><dd><input type="text" name="name" size="10" id="name" class="medium" /></dd>
+		    <dt><span class="required">*</span><label for="mobile">휴대전화</label>:&nbsp;</dt><dd><dd><input type="text" name="phone" size="20" id="mobile" class="medium" /></dd>
 		  
                     <dt><span class="required">*</span>티셔츠 사이즈:&nbsp;</dt>
                     <dd>
-                      <select name="tshirt">
+                      <select name="tshirt" class="short">
                         <option value="S(85)">S(85)</option>
                         <option value="M(90)">M(90)</option>
                         <option value="L(95)">L(95)</option>
@@ -33,13 +33,13 @@
                     </dd>
 		    <dt>직업:&nbsp;</dt>
 		    <dd>
-                      <select name="type">
+                      <select name="type" class="short">
 			<option value="worker">직장인</option>
 			<option value="student">학생</option>
 		      </select>
                     </dd>
 		    <dt><label for="location">소속</label>:&nbsp;</dt>
-		    <dd><input type="text" name="location" size="50" id="location" /></dd>
+		    <dd><input type="text" name="location" size="50" id="location" class="long" /></dd>
                   </dl>
                   <div class="button"><input type="submit" value="신청" /></div>
                 </fieldset>
