KPW2008 :: 소속은 required 가 아니잖아요. template 수정 (학생 및 청소년) :wq

--- a/trunk/www-framework/kpw/template/tt/register/default.html
+++ b/trunk/www-framework/kpw/template/tt/register/default.html
@@ -32,11 +32,11 @@
                         <option value="XXXL(110)">XXXL(110)</option>
                       </select>
                     </dd>
-		    <dt>직업:&nbsp;</dt>
+		    <dt><span class="required">*</span>직업:&nbsp;</dt>
 		    <dd>
                       <select name="type" class="short">
 			<option value="worker">직장인</option>
-			<option value="student">학생</option>
+			<option value="student">학생 및 청소년</option>
 		      </select>
                     </dd>
 		    <dt><label for="location">소속</label>:&nbsp;</dt>
