KPW2008 :: Comment 추가

--- a/trunk/www-framework/kpw/template/tt/register/default.html
+++ b/trunk/www-framework/kpw/template/tt/register/default.html
@@ -41,6 +41,8 @@
                     </dd>
 		    <dt><label for="location">소속</label>:&nbsp;</dt>
 		    <dd><input type="text" name="location" size="50" id="location" class="long" /></dd>
+		    <dt><label for="comment">코멘트</label>:&nbsp;</dt>
+		    <dd><textarea name="comment" id="comment" cols="60", rows="50"></textarea></dd>
                   </dl>
                   <div class="button"><input type="submit" value="신청" /></div>
                 </fieldset>
