KPW2008 :: 커멘트 너무 길어

--- a/trunk/www-framework/kpw/template/tt/register/default.html
+++ b/trunk/www-framework/kpw/template/tt/register/default.html
@@ -42,7 +42,7 @@
 		    <dt><label for="location">소속</label>:&nbsp;</dt>
 		    <dd><input type="text" name="location" size="50" id="location" class="long" /></dd>
 		    <dt><label for="comment">코멘트</label>:&nbsp;</dt>
-		    <dd><textarea name="comment" id="comment" cols="60", rows="50"></textarea></dd>
+		    <dd><textarea rows="5" id="comment" name="comment" class="long" /></dd>
                   </dl>
                   <div class="button"><input type="submit" value="신청" /></div>
                 </fieldset>
