--- a/trunk/www-framework/kpw/template/tt/_include/www_foot.html
+++ b/trunk/www-framework/kpw/template/tt/_include/www_foot.html
@@ -1,25 +1,18 @@
       <div id="footer">
-        <div class="box box_bottom center">
-          <div class="width33 float_left">
-            <div class="footer_block">
-              <h2>Korean Perl Workshop</h2>
-              <p>
-                <span><a href="http://groups.google.com/group/perl-kr-conf-2008">메일링리스트 가입</a></span> |
-                <span><a href="mailto:keedi.k _AT_ gmail _DOT_ com">기타 문의</a></span>
-              </p>
+        <div class="box box_bottom">
+          <div class="info">
+            <h2>Korean Perl Workshop</h2>
+            <div>
+              <span><a href="http://groups.google.com/group/perl-kr-conf-2008">메일링리스트 가입</a></span> |
+              <span><a href="mailto:keedi.k _AT_ gmail _DOT_ com">기타 문의</a></span>
             </div>
           </div>
-          <div class="width33 float_left">
-            <div class="footer_block">
-              <h2>.</h2>
-            </div>
+          <div class="info">
+            <h2>.</h2>
           </div>
-          <div class="width33 float_left">
-            <div class="footer_block">
-              <h2>.</h2>
-            </div>
+          <div class="info">
+            <h2>.</h2>
           </div>
         </div>
-        <p class="clear_both_thin">&nbsp;</p>
-        <p>Copyright © Seoul Perl Mongers, Korea. All rights reserved.</p>
+        <div id="copyright">Copyright &copy; Seoul Perl Mongers, Korea. All rights reserved.</div>
       </div>
