--- a/trunk/www-framework/kpw/template/tt/default/default.html
+++ b/trunk/www-framework/kpw/template/tt/default/default.html
@@ -1,6 +1,6 @@
-            <div class="content_block">
-              <h1 id="top">Korean Perl Workshop 2008: Rising Perl</h1>
-              <p class="meta">2008년 08월 08일 by keedi</p>
+            <h1>Korean Perl Workshop 2008: Rising Perl</h1>
+            <div class="news">
+              <p class="meta meta_top">2008년 08월 08일 by keedi</p>
               <ul>
                 <li>
                   <b>시간:</b>
@@ -51,14 +51,13 @@
                 </li>
                 <li>
                   <b>행사 내용:</b>
-
                   <p> 정규 발표(각 20분) 13개, 짧은 발표(각 5분) 8개 (<a href="/schedule">일정 참조</a>) </p>
                 </li>
                 <li>
                   <b>등록비:</b>
                   <ul>
-                    <li> <b>사전등록</b>: 청소년 및 학생(대학원생 포함)  5,000원 직장인 10,000원 </li>
-                    <li> <b>현장등록</b>: 청소년 및 학생(대학원생 포함) 10,000원 직장인 20,000원 </li>
+                    <li><b>사전등록</b>: 청소년 및 학생(대학원생 포함)  5,000원 직장인 10,000원 </li>
+                    <li><b>현장등록</b>: 청소년 및 학생(대학원생 포함) 10,000원 직장인 20,000원 </li>
                   </ul>
                   <p>
                     8월 11일 월요일부터 <a href="/register">이곳</a>에서 등록할 수 있습니다.
@@ -81,7 +80,6 @@
                     <li> NHN Corp. </li>
                     <li> Free OpenSource Software Association </li>
                     <li> 싸이텍 미디어, 지&amp;선 </li>
-
                     <li> 한빛 미디어 </li>
                     <li> KLDP </li>
                     <li> 펄매니아 </li>
@@ -90,7 +88,7 @@
                 </li>
               </ul>
             </div>
-            <div class="content_block">
+            <div class="news">
               <h2>KPW2008 공식 홈페이지를 개시했습니다.</h2>
               <p class="meta">2008년 08월 08일 by keedi</p>
               <p>
@@ -100,14 +98,14 @@
                 <li> 김희원(saillinux)님의 사이트 전반에 걸친 작업 </li>
                 <li> JP Kim님의 initial mock-up site design </li>
                 <li> 김기석님께서 제공해주신 event.perl.kr 도메인 </li>
-
                 <li> 장범수(pung96)님께서 제공해주신 서버 </li>
                 <li> 보이지 않는 곳에서 고생해주시는 STAFF 분들 </li>
               </ul>
               <p>
                 덕분에 이번 행사에서 사용할 워크샵 공식 홈페이지를
-                준비할 수 있었습니다.  다시 한 번 감사드리며,
+                준비할 수 있었습니다.다시 한 번 감사드리며,
                 행사와 관련한 새소식은 이곳을 통해 알려드리겠습니다. :-)
               </p>
             </div>
+
 
