--- a/trunk/www-framework/kpw/template/tt/default/faq.html
+++ b/trunk/www-framework/kpw/template/tt/default/faq.html
@@ -1,27 +1,28 @@
-            <div class="content_block">
-              <h1>FAQ (자주 묻는 질문)</h1>
-              <div class="content_faq">
-                <p>
-                  <b>Q:</b> 행사 등록비가 무엇인가요?
-                </p>
+            <h1>FAQ (자주 묻는 질문)</h1>
+            <div class="faq">
+              <p class="question">
+                <b>Q:</b> 행사 등록비가 무엇인가요?
+              </p>
+              <div class="answer">
                 <p>
                   <b>A:</b>
                   현장 등록비는 청소년 및 학생(대학원생 포함)은 1만원,
 		  그외의 경우(직장인) 2만원 입니다. 사전 등록을 하실 경우
 		  50%의 할인 혜택이 있습니다.
 		  행사 10일 전부터 사전 등록을 시작하며 선착순 마감 예정입니다.
-
-                  <ul>
-                    <b>등록비 :</b>
-                    <li> <b>사전등록</b>: 청소년 및 학생(대학원생 포함)  5,000원 직장인 10,000원 </li>
-                    <li> <b>현장등록</b>: 청소년 및 학생(대학원생 포함) 10,000원 직장인 20,000원 </li>
-                  </ul>
                 </p>
+                <ul>
+                  <b>등록비 :</b>
+                  <li> <b>사전등록</b>: 청소년 및 학생(대학원생 포함)  5,000원 직장인 10,000원 </li>
+                  <li> <b>현장등록</b>: 청소년 및 학생(대학원생 포함) 10,000원 직장인 20,000원 </li>
+                </ul>
               </div>
-              <div class="content_faq">
-                <p>
-                  <b>Q:</b> 행사 방문을 위한 주차가 가능한지 알고 싶습니다.
-                </p>
+            </div>
+            <div class="faq">
+              <p class="question">
+                <b>Q:</b> 행사 방문을 위한 주차가 가능한지 알고 싶습니다.
+              </p>
+              <div class="answer">
                 <p>
                   <b>A:</b>
                   행사장 주차 공간이 협소하오니 인근 공영 주차장을 이용
@@ -29,30 +30,36 @@
                   곳이므로 가급적 대중 교통을 이용해주시기 바랍니다.
                 </p>
               </div>
-              <div class="content_faq">
-                <p>
-                  <b>Q:</b> 식사 제공이 있나요?
-                </p>
+            </div>
+            <div class="faq">
+              <p class="question">
+                <b>Q:</b> 식사 제공이 있나요?
+              </p>
+              <div class="answer">
                 <p>
                   <b>A:</b>
                   저녁 식사로 샌드위치를 제공합니다.
                   간단한 부식과 음료도 이용하실 수 있습니다.
                 </p>
               </div>
-              <div class="content_faq">
-                <p>
-                  <b>Q:</b> 인터넷 사용이 가능한가요?
-                </p>
+            </div>
+            <div class="faq">
+              <p class="question">
+                <b>Q:</b> 인터넷 사용이 가능한가요?
+              </p>
+              <div class="answer">
                 <p>
                   <b>A:</b>
                   무선 인터넷 접속을 제공할 예정입니다. 유선 인터넷이
                   필요하신 분은 당일 행사진행 요원에게 문의 바랍니다.
                 </p>
               </div>
-              <div class="content_faq">
-                <p>
-                  <b>Q:</b> 행사 진행후 뒷풀이가 있는지요?
-                </p>
+            </div>
+            <div class="faq">
+              <p class="question">
+                <b>Q:</b> 행사 진행후 뒷풀이가 있는지요?
+              </p>
+              <div class="answer">
                 <p>
                   <b>A:</b>
                   워크샵은 오후 1시에 시작해서 약 8 ~ 9 시간 가량 진행할
