--- a/trunk/www-framework/kpw/html/css/style.css
+++ b/trunk/www-framework/kpw/html/css/style.css
@@ -1,345 +1,111 @@
-body, input, select, td, th {
-    font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
-    font-size: 12px;
-}
-
-/* Basic */
-body {
-    margin: 0;
-    padding: 0;
-    background-color: #eeeeee;
-}
-p {
-    margin: 0 20px;
-    padding: 5px 0 10px;
-}
-h1, h2, h3, h4 {
-    margin: 0 20px;
-    padding: 0 0 5px;
-}
-h1 {
-    font-size: 170%;
-}
-h2 {
-    font-size: 150%;
-}
-h3 {
-    font-size: 130%;
-}
-h4 {
-    font-size: 110%;
-}
-a {
-    color: #ff8080;
-}
-a:hover {
-    color: #388dd5;
-}
-fieldset {
-    border: medium none;
-}
-legend {
-    display: none;
-}
-
-/**
- * Sponsors
- */
-.sponsors {
-    margin: 0 10px 0 0;
-    background: white;
-}
-.sponsors h2 {
-    background: transparent url(/images/sponsors_bg.png) no-repeat scroll left top;
-    font-size: 1.0em;
-    font-weight: normal;
-    color: #777777;
-    padding: 0.8em 0;
-    margin: 0;
-    text-align: center;
-}
-.sponsors h3 {
-    margin-bottom: 3.5em;
-    background-color: #777777;
-    color: #ffffff;
-    font-size: 0.8em;
-    font-weight: bold;
-    margin: 0em 1em;
-    padding: 0.8em;
-    text-align:center;
-}
-.sponsors ul, ol {
-    margin: 10px;
-    padding: 0px;
-}
-.sponsors ul li {
-    list-style-type: none;
-    margin: 0 0 10px;
-    text-align: center;
-}
-.sponsors a {
-    color: #ffffff;
-}
-
-/* Container */
-#container {
-    text-align: center;
-    margin: 0 auto;
-    padding: 0;
-}
-#container div.center {
-    margin: 0 auto;
-    width: 860px;
-}
-
-/* Navigation */
-#navigation {
-    margin: 0;
-    padding: 0;
-    height: 40px;
-    background-color: #c00f0f;
-}
-
-#navigation ul {
-    float: left;
-    clear: both;
-    margin: 0;
-    padding: 0;
-}
-
-#navigation li {
-    margin: 0;
-    float: left;
-    list-style-image: none;
-    list-style-position: outside;
-    list-style-type: none;
-}
-#navigation li a {
-    color: white;
-    height: 40px;
-    line-height: 40px;
-    margin: 0 1em 0 0;
-    text-decoration: none;
-}
-#navigation li a:hover {
-    color: yellow;
-    text-decoration: underline;
-}
-#navigation ul li a.selected {
+/* navigation */ 
+#navigation a.selected {
     font-weight: bold;
     color: yellow;
 }
 
-/* Content */
-#content {
-    padding: 120px 0 0px;
-    background: transparent url(/images/kpw_horizontal.png) no-repeat scroll center 20px !important;
+/* main */
+.news, .schedule, .location, .faq, .link, .form, .registration{
+    margin-bottom: 1.5em;
 }
-
-/* Footer */
-#footer {
-    margin: 0;
-    padding: 0;
-    background-color: #eeeeee;
-}
-
-/* Background Box */
-div.box {
-    text-align: left;
-    margin: 0;
-    padding: 2px 10px;
-    width: auto;
-    clear: both;
-}
-div.box_top {
-    height: 30px;
-    background: transparent url(/images/box_top.png) no-repeat scroll center bottom !important;
-}
-div.box_middle {
-    background: transparent url(/images/box_middle.png) repeat-y scroll center top !important;
-}
-div.box_bottom {
-    height: 150px;
-    background: transparent url(/images/box_bottom.png) no-repeat scroll center top !important;
-}
-
-/* Content Text */
-div.content_block {
-    margin-bottom: 20px;
-    color: #333;
-}
-div.content_block h1 {
-    margin-bottom: 1em;
-    border-bottom: 2px solid #c00f0f;
-}
-div.content_block h1#top {
-    margin-bottom: 0;
-}
-div.content_block h2, div.content_block h3, div.content_block h4 {
-    border-bottom: 1px dotted #777777;
-} 
-div.content_block .meta {
-    margin: 0px 20px 0;
-    padding: 2px 0 5px;
-    text-align: right;
+#main .meta {
     font-size: 0.8em;
     color: #555555;
+    text-align: right;
 }
-div.content_faq {
-    margin: 20px 30px 0;
+#main .meta_top {
+    margin-top: -20px;
+    border: none;
+}
+#main .map {
+    text-align: center;
+}
+#main .map img {
+    margin: 0.5em;
+}
+#main .faq {
+    padding: 1em 0 0 1em;
     border-width: 1px;
     border-color: #cccccc;
     border-style: solid none none solid;
 }
-/*
-div.content_block .table_warpper {
-    margin: 0 20px;
-    padding: 5px 0 10px;
+#main .faq .answer {
+    margin-top: 1em;
 }
-div.content_block table {
-    width: 100%;
-    border: 1px solid #333;
-}
-div.content_block th, div.content_block td {
-    border-bottom: 1px dotted #666;
-    padding: 2px 5px;
-}
-div.content_block th {
-    color: #eee;
-    background-color: #333;
-}
-div.content_block td {
-    color: #333;
-    background-color: #eee;
-}
-div.content_block tr.alt td {
-    color: #333;
-    background-color: #ccf;
-}
-div.content_block tr.last td {
-    border-bottom: none;
-}
-*/
-
-/* Footer Text */
-div.footer_logo {
-    background: transparent url(/images/kpw_footer.png) no-repeat scroll center top !important;
-    margin-top: 20px;
-    font-size: 0.9em;
-    overflow: hidden;
-    height: 105px;
-}
-div.footer_block {
-    margin-top: 20px;
-    color: #eeeeee;
-    font-size: 0.9em;
-    overflow: hidden;
-    height: 105px;
-}
-div.footer_block h1, div.footer_block h2, div.footer_block h3, div.footer_block h4 {
-    border-bottom: 1px dotted #eeeeee;
-}
-div.footer_block h1 {
-    font-size: 1.3em;
-}
-div.footer_block h2 {
-    font-size: 1.2em;
-}
-div.footer_block h3 {
-    font-size: 1.1em;
-}
-div.footer_block h4 {
-    font-size: 1.0em;
-}
-div.footer_block span {
-    font-size: 1.1em;
-    color: #ddd;
-}
-div.footer_block a {
-    color: #ffffff;
-    text-decoration: none;
-}
-div.footer_block a:hover {
-    text-decoration: underline;
-    color: yellow;
-}
-
-/* Widths */
-.widthsponsors {
-    width: 20%;
-}
-.width_footerlogo {
-    overflow: hidden;
-    width: 140px;
-}
-.width33 {
-    width: 33%;
-}
-.width66 {
-    width: 79%;
-}
-.width100 {
-    width: 100%;
-}
-.short {
-    width: 20%;
-}
-.medium {
-    width: 40%;
-}
-.long {
-    width: 70%;
-}
-
-/* Float */
-.float_left {
-    float: left;
-}
-.float_right {
-    float: right;
-}
-.clear_both_thin {
-    overflow: hidden;
-    visibility: hidden;
-    height: 0;
-    clear: both;
-}
-#group-grid {
-    margin: 15px 20px;
-}
-#register-form {
-    margin: 15px 20px;
-}
-#register-form dl dt {
+#main .form dl dt {
     float: left;
     margin: 0 0.5em 0 0;
     width: 20%;
     text-align: right;
     font-weight: bold;
 }
-#register-form dl dd {
+#main .form dl dd {
     margin: 0 0 0.5em 0;
 }
-.button {
+#main .form .required {
+    margin-right: 0.5em;
+    color: #c00f0f;
+}
+#main .form .button {
     margin: 0.5em auto;
     padding: 0.5em 0pt;
     text-align: center;
 }
-.banner {
-    margin: 15px 20px 5px;
-    padding: 0;
+#main .form .button input {
+    width: 10em;
 }
-.topic {
-    background: transparent url(/kpw2008/images/post.gif) no-repeat scroll 0 2px;
-    padding-left: 20px;
+#main table {
+    width: 100%;
 }
-.author {
-    color: #333333;
+#main table td.text {
+    width: 40%;
 }
-.map-img {
+
+/* sponsors */
+#sponsors {
+    background: white;
     text-align: center;
 }
-.required {
-    margin-right: 0.5em;
-    color: #c00f0f;
+
+#sponsors h2 {
+    margin: auto;
+    padding: 0.8em 0;
+    font-size: 1em;
+    font-weight: normal;
+    color: #777777;
+}
+#sponsors h3 {
+    margin: 0 1em;
+    padding: 0.8em;
+    background-color: #777777;
+    color: #ffffff;
+    font-size: 0.8em;
+    font-weight: bold;
+}
+#sponsors ul, #sponsors ol {
+    margin: 1em;
+    padding: 0px;
+}
+#sponsors ul li, #sponsors ol li {
+    margin: 0 0 0.5em;
+}
+#sponsors a {
+    margin: 0 auto;
+    width: 120px;
+}
+
+/* footer */ 
+#footer div.info {
+    overflow: hidden;
+    word-wrap: break-word;
+}
+#footer div.info h2 {
+    margin: 0 20px;
+    border-bottom: 1px dotted #eeeeee;
+    font-size: 1em;
+    font-weight: bold;
+}
+#footer div.info div {
+    margin: 5px 20px 0 20px;
+    color: #dddddd;
 }
