--- a/trunk/www-framework/kpw/template/tt/default/location.html
+++ b/trunk/www-framework/kpw/template/tt/default/location.html
@@ -1,17 +1,20 @@
-            <div class="content_block">
-              <h1>오시는 길</h1>
+            <h1>오시는 길</h1>
+            <div class="location">
 	      <h3>주소 및 연락처</h3>
 	      <ul>
 		<li> 서울시 서초구 서초동 1307-26 승원빌딩 3층 </li>
 		<li> 02 - 3476 - 0118 </li>
 	      </ul>
-	      <br />
+            </div>
+            <div class="location">
 	      <h3>행사장 오시는 길</h3>
 	      <ul>
                 <li> 지하철 2호선을 타고 강남역 6번 출구로 나오세요. </li>
                 <li> 약 50M 직진하시면 파고다어학원 건물이 보입니다. </li>
                 <li> 파고다 어학원 바로 뒷 건물(승원빌딩)의 토즈(TOZ) 입니다. </li>
 	      </ul>
-	      <div class="map-img" style="margin: 10px;"><img src="images/map-01.gif" /></div>
-              <div class="map-img" style="margin: 10px;"><img src="images/map-02.png" /></div>
+            </div>
+            <div class="location map">
+	      <img src="images/map-01.gif" alt="" title="" class="map" />
+              <img src="images/map-02.png" alt="" title="" class="map" />
             </div>
