--- a/trunk/www-framework/kpw/template/tt/register/default.html
+++ b/trunk/www-framework/kpw/template/tt/register/default.html
@@ -1,10 +1,9 @@
-            <div class="content_block">
-              <h1>사전등록</h1>
-              <p>blah</p>
+            <h1>사전등록</h1>
+            <div class="form">
               <h3>신청양식</h3>
               <p><span class="required">*</span>는 필수입니다.</p>
 [% IF form_messages %]
-              <ul>
+              <ul class="error">
 [% FOREACH msg IN form_messages %]
                 <li>[% c.config.messages.${msg.key}.${msg.value} %]</li>
 [% END %]
@@ -47,15 +46,19 @@
                   <div class="button"><input type="submit" value="신청" /></div>
                 </fieldset>
               </form>
+            </div>
+            <div class="registration">
               <h3>신청자 현황</h3>
-              <p>현재 [% users.size || 0 %]명 등록중입니다.</p>
-              <table cellpadding="0" cellspacing="1" border="1" summary="신청자">
+              <p>현재 <em>[% users.size || 0 %]</em>명 등록중입니다.</p>
+[% IF users.size %]
+              <table cellpadding="0" cellspacing="1" border="0" summary="신청자">
                 <caption>신청자</cpation>
                 <thead>
                   <tr>
                     <th>이름</th>
                     <th>닉네임</th>
                     <th>email</th>
+                    <th>코멘트</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -64,8 +67,10 @@
                     <td>[% user.name | html %]</td>
                     <td>[% user.nick | html %]</td>
                     <td>[% user.email | html %]</td>
+                    <td class="text">[% user.comment | html | html_line_break %]</td>
                   </tr>
 [% END %]
                 </tbody>
               </table>
+[% END %]
             </div>
